model trained but biased ?

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "d161aed5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "0a451358",
    "metadata": {},
    "outputs": [
@@ -21,12 +21,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Unnamed: 0               OBJID  SPIRAL  ELLIPTICAL  UNCERTAIN  asset_id\n",
-      "0           0  587731186203885750       0           0          1    278415\n",
-      "1           1  587731187277627676       0           0          1    280228\n",
-      "2           2  588015507658768464       0           0          1    287951\n",
-      "3           3  587731187277693069       0           1          0    280231\n",
-      "4           4  587731187277693072       0           0          1    280232\n"
+      "   Unnamed: 0               OBJID  SPIRAL  ELLIPTICAL  UNCERTAIN  asset_id  \\\n",
+      "0           0  587731186203885750       0           0          1    278415   \n",
+      "1           1  587731187277627676       0           0          1    280228   \n",
+      "2           2  588015507658768464       0           0          1    287951   \n",
+      "3           3  587731187277693069       0           1          0    280231   \n",
+      "4           4  587731187277693072       0           0          1    280232   \n",
+      "\n",
+      "   label  \n",
+      "0      2  \n",
+      "1      2  \n",
+      "2      2  \n",
+      "3      1  \n",
+      "4      2  \n"
      ]
     },
     {
@@ -35,7 +42,7 @@
        "numpy.int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "95326a89",
    "metadata": {},
    "outputs": [
@@ -59,38 +66,25 @@
      "text": [
       "(8000,)\n",
       "(2000,)\n",
-      "        SPIRAL  ELLIPTICAL  UNCERTAIN\n",
-      "192954       0           0          1\n",
-      "58065        0           0          1\n",
-      "247063       0           0          1\n",
-      "74741        0           0          1\n",
-      "29849        1           0          0\n",
-      "...        ...         ...        ...\n",
-      "192670       0           1          0\n",
-      "134112       0           0          1\n",
-      "218236       0           0          1\n",
-      "181974       0           0          1\n",
-      "171421       1           0          0\n",
-      "\n",
-      "[8000 rows x 3 columns]\n",
-      "(2000, 3)\n"
+      "(8000,)\n",
+      "(2000,)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "df_sampled = df.sample(n=10000, random_state=42)\n",
-    "x_train,x_test,y_train,y_test = train_test_split(df_sampled[\"asset_id\"],df_sampled[[\"SPIRAL\",\"ELLIPTICAL\",\"UNCERTAIN\"]],train_size=0.8,random_state=55)\n",
+    "x_train,x_test,y_train,y_test = train_test_split(df_sampled[\"asset_id\"],df_sampled[\"label\"],train_size=0.8,random_state=55)\n",
     "\n",
     "print(x_train.shape)\n",
     "print(x_test.shape)\n",
-    "print(y_train)\n",
+    "print(y_train.shape)\n",
     "print(y_test.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "5766e9ed",
    "metadata": {},
    "outputs": [
@@ -10142,7 +10136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "1a996857",
    "metadata": {},
    "outputs": [
@@ -10150,8 +10144,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train_dataset: 100%|██████████| 7689/7689 [01:14<00:00, 103.79it/s]\n",
-      "test_dataset: 100%|██████████| 1937/1937 [00:18<00:00, 106.06it/s]"
+      "train_dataset: 100%|██████████| 7689/7689 [01:30<00:00, 85.15it/s] \n",
+      "test_dataset: 100%|██████████| 1937/1937 [00:22<00:00, 85.64it/s]"
      ]
     },
     {
@@ -10196,7 +10190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "b5912544",
    "metadata": {},
    "outputs": [],
@@ -10235,7 +10229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "b2546657",
    "metadata": {},
    "outputs": [
@@ -10349,14 +10343,30 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: np.str_('SPIRAL')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 51\u001b[0m\n\u001b[0;32m     48\u001b[0m x_train_imgs \u001b[38;5;241m=\u001b[39m load_images(x_train, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:/Coding Folder/Projects/ML-Project/resized_dataset/train_dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     49\u001b[0m x_test_imgs \u001b[38;5;241m=\u001b[39m load_images(x_test, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:/Coding Folder/Projects/ML-Project/resized_dataset/test_dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 51\u001b[0m y_train \u001b[38;5;241m=\u001b[39m \u001b[43my_train\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     52\u001b[0m y_test \u001b[38;5;241m=\u001b[39m y_test\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m# print(y_train)\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: np.str_('SPIRAL')"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m176s\u001b[0m 724ms/step - loss: 2.7573 - val_loss: 0.9848\n",
+      "Epoch 2/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m155s\u001b[0m 645ms/step - loss: 0.9913 - val_loss: 0.9854\n",
+      "Epoch 3/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m156s\u001b[0m 647ms/step - loss: 0.9948 - val_loss: 0.9847\n",
+      "Epoch 4/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m164s\u001b[0m 680ms/step - loss: 0.9822 - val_loss: 0.9855\n",
+      "Epoch 5/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m162s\u001b[0m 671ms/step - loss: 0.9970 - val_loss: 0.9860\n",
+      "Epoch 6/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m163s\u001b[0m 675ms/step - loss: 0.9933 - val_loss: 0.9848\n",
+      "Epoch 7/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 661ms/step - loss: 0.9860 - val_loss: 0.9851\n",
+      "Epoch 8/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m162s\u001b[0m 670ms/step - loss: 0.9921 - val_loss: 0.9866\n",
+      "Epoch 9/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 660ms/step - loss: 0.9928 - val_loss: 0.9853\n",
+      "Epoch 10/10\n",
+      "\u001b[1m241/241\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m157s\u001b[0m 651ms/step - loss: 0.9899 - val_loss: 0.9858\n",
+      "\u001b[1m61/61\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 112ms/step\n"
      ]
     }
    ],
@@ -10392,17 +10402,9 @@
     "model.summary()\n",
     "\n",
     "model.compile(\n",
-    "    loss = tf.keras.losses.categorical_crossentropy,\n",
+    "    loss = tf.keras.losses.sparse_categorical_crossentropy,\n",
     "    optimizer = Adam(learning_rate=0.01)\n",
     ")\n",
-    "\n",
-    "# if isinstance(y_train[0], str) and y_train[0] in ['SPIRAL', 'ELLIPTICAL', 'UNCERTAIN']:\n",
-    "#     y_train = y_train[1:]\n",
-    "#     x_train = x_train[1:]\n",
-    "\n",
-    "# if isinstance(y_test[0], str) and y_test[0] in ['SPIRAL', 'ELLIPTICAL', 'UNCERTAIN']:\n",
-    "#     y_test = y_test[1:]\n",
-    "#     x_test = x_test[1:]\n",
     "\n",
     "x_train, y_train = clean_asset_ids(x_train, y_train,\"E:/Coding Folder/Projects/ML-Project/resized_dataset/train_dataset\")\n",
     "x_test, y_test = clean_asset_ids(x_test, y_test,\"E:/Coding Folder/Projects/ML-Project/resized_dataset/test_dataset\")\n",
@@ -10421,38 +10423,45 @@
     "    validation_data=(x_test_imgs, y_test),\n",
     "    epochs=10,\n",
     "    batch_size=32\n",
-    ")\n",
-    "\n",
-    "\n",
-    "predictions = model.predict(x_test)\n",
-    "pred_class = np.argmax(predictions, axis=1)  \n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c7851f9",
+   "id": "7395273c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['SPIRAL' 'ELLIPTICAL' 'UNCERTAIN']\n"
+      "\u001b[1m61/61\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 121ms/step\n"
      ]
     }
    ],
    "source": [
-    "print(y_train)"
+    "predictions = model.predict(x_test_imgs)\n",
+    "pred_class = np.argmax(predictions, axis=1)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cc794d4",
+   "execution_count": 18,
+   "id": "1cc7fc61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 2 ... 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pred_class)\n"
+   ]
   }
  ],
  "metadata": {
